Changing few page infos and added variables to css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,12 @@
 
   <div id="contactAnchor">
     <h3>Contact & autre</h3>
-    <p>Mail, Github, Steam Account, OP.GG ?</p>
+    <ul class="contactList">
+      <li><span style="text-decoration: underline">Mail :</span> weiss.gregory48@gmail.com</li>
+      <li><span style="text-decoration: underline">Github :</span> https://github.com/GregWss</li>
+      <li><span style="text-decoration: underline">LinkedIn :</span> https://www.linkedin.com/in/gregwss/</li>
+      <li><span style="text-decoration: underline">Compte Steam :</span></li>
+    </ul>
   </div>
 
   <div>
