--- a/src/app/hellblaze-infos/hellblaze-infos.component.html
+++ b/src/app/hellblaze-infos/hellblaze-infos.component.html
@@ -1,5 +1,6 @@
 <h4>Hellblaze</h4>
-<p>A video game programmed with a team of 8 people in 2019 during studies in game programming at UQAC</p>
+<p>Un jeu conçu par une équipe de 8 personnes en 2018 au cours d'un programme d'étude à l'UQAC.</p>
+<p>Dans cette alpha, le principe est de réaliser des quêtes et de progresser en tuant monstres et boss.</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/DEbtSmcdpt8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <ul>
   <li><span style="text-decoration: underline">Style :</span> 3D RPG / Beat'em'all</li>
