--- a/src/app/hellblaze-infos/hellblaze-infos.component.html
+++ b/src/app/hellblaze-infos/hellblaze-infos.component.html
@@ -7,4 +7,6 @@
   <li><span style="text-decoration: underline">Techno :</span> Unity</li>
   <li><span style="text-decoration: underline">Nombre de joueurs :</span> Solo</li>
 </ul>
+
+<input type="button" value="Télécharger" class="btn" onclick="window.location='assets/downloads/HELLBLAZE.zip';">
 <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/9xdEKtRHqu4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
