--- a/src/app/isstracker-carousel/isstracker-carousel.component.html
+++ b/src/app/isstracker-carousel/isstracker-carousel.component.html
@@ -1,6 +1,9 @@
 <h4>ISSTracker</h4>
 <p>An Android App which help users to track in real time the International Space Station position</p>
 
-<img class="mySlides" alt="ISS Tracker's homepage" src="assets/img/ISSTracker/accueil.jpg" height="30%" width="30%"/>
-<img class="mySlides" alt="ISS Tracker's following map" src="assets/img/ISSTracker/map.jpg" height="30%" width="30%"/>
-<img class="mySlides" alt="ISS Tracker's astronaut informations" src="assets/img/ISSTracker/astros.jpg" height="30%" width="30%"/>
+
+<img class="mySlides" alt="ISS Tracker's homepage" src="assets/img/ISSTracker/accueil.jpg" height="10%" width="10%"/>
+<img class="mySlides" alt="ISS Tracker's following map" src="assets/img/ISSTracker/map.jpg" height="10%" width="10%"/>
+<img class="mySlides" alt="ISS Tracker's astronaut informations" src="assets/img/ISSTracker/astros.jpg" height="10%" width="10%"/>
+
+<a href="https://github.com/GregWss/ISSTracker">Dépôt Github</a>
