--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,14 @@
+/* VARIABLES */
+$background-color: #263238;
+$accent-color: #ffca28;
+$accent-color-light: #fffd61;
+
 /* Title & header style */
 .titleIcon {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
-  height: 50%;
+  width: 40%;
   margin-top: 5px;
 }
 
@@ -18,4 +22,108 @@
 #headerList li {
   display: inline;
   padding: 25px;
+}
+
+/* Dot navigation */
+.dotstyle {
+  position: fixed;
+  right: 5px;    // 5px relative to the most-right of parent
+  margin-top: 50px;
+}
+
+.dotstyle ul {
+	position: relative;
+	display: inline-block;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	cursor: default;
+}
+
+.dotstyle li {
+	position: relative;
+	display: block;
+	margin: 0 16px;
+  margin-top: 10px;
+	width: 16px;
+	height: 16px;
+	cursor: pointer;
+}
+
+.dotstyle li a {
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	outline: none;
+	border-radius: 50%;
+	background-color: #fff;
+	background-color: rgba(255,255,255,0.3);
+	text-indent: -999em;
+	cursor: pointer; /* make the text accessible to screen readers */
+	position: absolute;
+}
+
+/* Small dot with stroke */
+.dotstyle-smalldotstroke li {
+	border-radius: 50%;
+	box-shadow: 0 0 0 2px rgba(255, 255, 255, 0);
+	-webkit-transition: box-shadow 0.3s ease;
+	-moz-transition: box-shadow 0.3s ease;
+	-o-transition: box-shadow 0.3s ease;
+	transition: box-shadow 0.3s ease;
+}
+
+.dotstyle-smalldotstroke li a {
+	background-color: rgba(255, 255, 255, 0.7);
+	-webkit-transition: background-color 0.3s ease, -webkit-transform 0.3s ease;
+	-moz-transition: background-color 0.3s ease, -moz-transform 0.3s ease;
+	-o-transition: background-color 0.3s ease, -o-transform 0.3s ease;
+	transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.dotstyle-smalldotstroke li a:hover,
+.dotstyle-smalldotstroke li a:focus,
+.dotstyle-smalldotstroke li.current a {
+	background-color: white;
+}
+
+.dotstyle-smalldotstroke li.current a {
+	-webkit-transform: scale(0.4);
+	-moz-transform: scale(0.4);
+	-o-transform: scale(0.4);
+	transform: scale(0.4);
+}
+
+.dotstyle-smalldotstroke li.current {
+	box-shadow: 0 0 0 2px white;
+}
+
+/* projectSurvival */
+#projectSurvival {
+  height: 400px;
+  background-image: url("../assets/img/2DFight/demo1.gif");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  -ms-background-size: cover;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  background-size: cover;
+  box-shadow: 0 0 8px 8px $background-color inset;
+}
+
+#projectSurvival p, #projectSurvival li, #projectSurvival h4 {
+  color: black;
+}
+
+#projectSurvival h4 {
+  margin-left: 25px;
+  padding-top: 15px;
+}
+
+/* Contact style */
+.contactList {
+  list-style: none;
 }
