--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -99,6 +99,9 @@ $accent-color-light: #fffd61;
 	box-shadow: 0 0 0 2px white;
 }
 
+/* Top carousel style */
+
+
 /* projectSurvival */
 #projectSurvival {
   height: 400px;
@@ -122,6 +125,9 @@ $accent-color-light: #fffd61;
   margin-left: 25px;
   padding-top: 15px;
 }
+
+/* projectSurvival carousel style */
+
 
 /* Contact style */
 .contactList {
