--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,8 +2,10 @@
 $background-color: #263238;
 $accent-color: #ffca28;
 $accent-color-light: #fffd61;
+/* ALL ANIMATIONS ARE MADE WITH AOS : https://michalsnik.github.io/aos/ */
 
 /* Title & header style */
+/* Header Icon font : https://www.dafont.com/minecrafter.font */
 .titleIcon {
   display: block;
   margin-left: auto;
@@ -100,7 +102,51 @@ $accent-color-light: #fffd61;
 }
 
 /* Top carousel style */
+ngb-carousel {
+    max-width: 700px;
+    margin: 50px auto;
+}
 
+ngb-carousel img {
+    width: 100%;
+    outline: none;
+}
+
+ngb-carousel {
+    width: inherit;
+    height: inherit;
+}
+
+.carousel-inner {
+    overflow: visible;
+}
+
+.carousel-item {
+    display: flex !important;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 1.2s ease-in-out, visibility 1.2s;
+    z-index: -1;
+}
+
+.carousel-item.active{
+    opacity: 1;
+    visibility: visible;
+    z-index: 10;
+}
+
+.carousel-control-prev {
+     z-index: 20;
+}
+
+
+.carousel-control-next {
+     z-index: 20;
+}
+
+.carousel-indicators{
+    z-index: 20;
+}
 
 /* projectSurvival */
 #projectSurvival {
