Added content and some style

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,33 +14,115 @@
 <!-- Liste de navigation en points -->
 <div data-aos="zoom-in" class="dotstyle dotstyle-smalldotstroke">
 	<ul>
-		<li (click)="isCurrent(1)" [ngClass]="{'current': selectedDot === 1}"><a href="#anchor2020">2020</a></li>
-		<li (click)="isCurrent(2)" [ngClass]="{'current': selectedDot === 2}"><a href="#anchor2019">2019</a></li>
-		<li (click)="isCurrent(3)" [ngClass]="{'current': selectedDot === 3}"><a href="#anchor2018">2018</a></li>
+		<li (click)="isCurrent(1)" [ngClass]="{'current': selectedDot === 1}"><a href="#anchorHellblaze">Hellblaze</a></li>
+		<li (click)="isCurrent(2)" [ngClass]="{'current': selectedDot === 2}"><a href="#anchorERROR_418">ERROR_418</a></li>
+		<li (click)="isCurrent(3)" [ngClass]="{'current': selectedDot === 3}"><a href="#anchor2DFight">2DFight</a></li>
+		<li (click)="isCurrent(4)" [ngClass]="{'current': selectedDot === 4}"><a href="#anchorOthers">Others Projects</a></li>
 	</ul>
 </div>
 
 <!-- Content -->
 <div class="container offset-1 col-10">
-  <div inViewport [inViewportOptions]="{ threshold: [0] }" (inViewportAction)="isCurrent(1)" id="anchor2020" class="offset-md-1">
-    <h3>2020</h3>
-  </div>
-  <div class="row justify-content-around">
-    <div class="bubble bubbleLeft col-md-4 col-sm-12 col-xs-12">
-      <p>Game Jam</p>
-    </div>
-    <div class="bubble bubbleRight col-md-4 col-sm-12 col-xs-12">
-      <p>Projet Fight</p>
-      <img class="projectFightDemo" src="assets/img/topCarousel/demo1.gif" alt="">
-    </div>
+  <div>
+    <p>Une description originale et amusante. (pas pour l'instant du coup)</p>
   </div>
 
-  <div inViewport [inViewportOptions]="{ threshold: [0] }" (inViewportAction)="isCurrent(2)" id="anchor2019" class="offset-md-1">
-    <h3>2019</h3>
+  <div inViewport [inViewportOptions]="{ threshold: [0] }" (inViewportAction)="isCurrent(1)" id="anchorHellblaze">
+    <h3>Jeux</h3>
+  </div>
+  <div class="gamePres" data-aos="fade-right">
+    <h4>Hellblaze</h4>
+    <div class="hellblazeVideo">
+      <iframe class="videoPlayer" width="560" height="315" src="https://www.youtube.com/embed/DEbtSmcdpt8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <h5>Infos</h5>
+    <p>Hellblaze est un prototype de jeu RPG / Beat'em'all à la 3ème personne. Il a été réalisé lors de notre formation en création de jeux vidéo de l'Université du Québec à Chicoutimi.</p>
+    <h5>Contrôles</h5>
+    <ul>
+      <li>WASD / Joystick gauche : bouger le personnage</li>
+      <li>Souris / Joystick droit : bouger la caméra</li>
+      <li>Clic gauche / X : attaquer</li>
+      <li>Echap / Start : pause</li>
+      <li>I / Select : stats de progression</li>
+    </ul>
+
+    <h5>Equipe</h5>
+    <div class="row justify-content-around">
+      <div class="col-md-6 col-sm-12 col-xs-12">
+        <ul>
+          <li>Samuel BUSSON</li>
+          <li>Gabriel DERRIEN</li>
+          <li>Lorenzo MARNAT</li>
+          <li>Grégory WEISS</li>
+        </ul>
+      </div>
+      <div class="col-md-6 col-sm-12 col-xs-12">
+        <ul>
+          <li>Florian DE LIMA</li>
+          <li>Hugo MOHAMED</li>
+          <li>Baptiste ROUPAIN</li>
+        </ul>
+      </div>
+    </div>
+
+    <input type="button" value="Télécharger" class="btn" onclick="window.location='assets/downloads/HELLBLAZE.zip';">
+  </div>
+
+  <div class="gamePres" inViewport [inViewportOptions]="{ threshold: [0] }" (inViewportAction)="isCurrent(2)" id="anchorERROR_418" data-aos="fade-left">
+    <h4>ERROR 418</h4>
+    <img src="assets/img/ERROR_418/img1.jpg" alt="Illustration 1">
+    <img src="assets/img/ERROR_418/img2.jpg" alt="Illustration 2">
+
+    <h5>Infos</h5>
+    <p>Réalisé dans le cadre de la Global Game Jam 2020 à Montréal. Thème : repair</p>
+    <h5>Contrôles</h5>
+    <ul>
+      <li>WASD / Joystick gauche : bouger le personnage</li>
+      <li>Entrée / A : Réparer</li>
+    </ul>
+
+    <h5>Equipe</h5>
+    <ul>
+      <li>Pas sûr 1</li>
+      <li>Pas sûr 2</li>
+      <li>Pas sûr 3</li>
+      <li>Pas sûr 4</li>
+    </ul>
+
+    <input type="button" value="Télécharger" class="btn" onclick="window.location='assets/downloads/ERROR_418.zip';">
+    <p>Vous pouvez aussi voir le jeu sur <a href="https://globalgamejam.org/2020/games/error-418-6">le site GGJ</a> ou sur <a href="https://github.com/gabrieldrn/ERROR-418">sa page GitHub !</a></p>
+  </div>
+
+  <div class="gamePres" inViewport [inViewportOptions]="{ threshold: [0] }" (inViewportAction)="isCurrent(3)" id="anchor2DFight" data-aos="fade-right">
+    <h4>Projet en cours : 2D Fight</h4>
+    <img class="imgDemo" src="assets/img/2DFight/demo1.gif" alt="Image animée de deux joueurs se battant">
+
+    <h5>Infos</h5>
+    <p>Un "Versus Fighting Game" en 2D qui a pour but de rassembler (ou fâcher) les joueurs.</p>
+    <h5>Contrôles</h5>
+    <ul>
+      <li>AD / Joystick gauche : bouger le personnage</li>
+      <li>Espace / A : sauter</li>
+      <li>Clic gauche / X : tirer</li>
+    </ul>
+
+    <h5>Conseils</h5>
+    <ul>
+      <li>Utilisez les murs pour continuer vos sauts !</li>
+      <li>Gérer vos flêches, elles sont limitées !</li>
+      <li>Ramassez des flêches quand vous en êtes à cours !</li>
+    </ul>
+
+    <p>Vous pouvez voir le code source du jeu sur <a href="https://github.com/GregWss">sa page GitHub !</a></p>
+  </div>
+
+  <div inViewport [inViewportOptions]="{ threshold: [0] }" (inViewportAction)="isCurrent(4)" id="anchorOthers" class="offset-md-1">
+    <h3>Autres projets</h3>
   </div>
   <div class="row justify-content-around">
-    <div class="bubble bubbleLeft col-md-4 col-sm-12 col-xs-12">
-      <p>ISSTracker</p>
+    <div class="bubble bubbleLeft col-md-5 col-sm-12 col-xs-12" data-aos="fade-right">
+      <h5>ISSTracker</h5>
       <ngb-carousel
       [showNavigationArrows]="true"
       [showNavigationIndicators]="true"
@@ -66,26 +148,10 @@
         </ng-template>
       </ngb-carousel>
     </div>
-    <div class="bubble bubbleRight col-md-4 col-sm-12 col-xs-12">
-      <p>Hellblaze</p>
-      <iframe class="videoPlayer" src="https://www.youtube.com/embed/DEbtSmcdpt8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-  </div>
-
-  <div inViewport [inViewportOptions]="{ threshold: [0] }" (inViewportAction)="isCurrent(3)" id="anchor2018" class="offset-md-1">
-    <h3>2018</h3>
-  </div>
-  <div class="row justify-content-around">
-    <div class="bubble bubbleLeft col-md-4 col-sm-12 col-xs-12">
-      <p>MeliorIHM</p>
-    </div>
-    <div class="bubble bubbleRight col-md-4 col-sm-12 col-xs-12">
-      <p>SAFER</p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="bubble bubbleLeft col-md-4 col-sm-12 col-xs-12 offset-md-1">
-      <p>SImage</p>
+    <div class="bubble bubbleRight col-md-5 col-sm-12 col-xs-12" data-aos="fade-left">
+      <h5>Synthèse d'images</h5>
+      <img class="imgDemo" src="assets/img/SImage/ray-tracing_spheres.bmp" alt="Image réalisé à l'aide du lancer de rayon"/>
+      <p>Image réalisée grâce à un programme de "RayTracing" en C++</p>
     </div>
   </div>
 
