--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -104,71 +104,41 @@ $accent-color-light: #fffd61;
 
 /* Content */
 .container {
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
-.bubble {
-  padding-bottom: 15px;
+/* General games presentation */
+.gamePres {
+    background-color: rgba(79, 91, 98, 0.5);
+    border-top: 3px solid $accent-color;
+    border-bottom: 3px solid $accent-color;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
-.bubbleLeft {
-  background-color: $primary-color-light;
-  border: 1px solid $accent-color;
-  border-radius: 10px;
-}
-
-.bubbleRight {
-  background-color: $primary-color-light;
-  border: 1px solid $accent-color;
-  border-radius: 10px;
-}
-
-.projectFightDemo {
-  max-width: 100%;
+/* Hellblaze presentation */
+.hellblazeVideo {
+  margin-left: 25px;
+  margin-right: 25px;
 }
 
 .videoPlayer {
   max-width: 100%;
 }
 
-/* Carousel style */
-ngb-carousel {
-    max-width: 100%;
-    margin: 50px auto;
+
+/* Classes pour les bulles de présentation */
+.bubble {
+  padding-bottom: 15px;
+  background-color: rgba(79, 91, 98, 0.5);
+  border: 1px solid $accent-color;
+  border-radius: 10px;
 }
 
-ngb-carousel img {
-    width: 50%;
-    outline: none;
+.bubbleLeft {
+
 }
 
-.carousel-inner {
-    overflow: visible;
-}
+.bubbleRight {
 
-.carousel-item {
-    display: flex !important;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 1.2s ease-in-out, visibility 1.2s;
-    z-index: -1;
-}
-
-.carousel-item.active{
-    opacity: 1;
-    visibility: visible;
-    z-index: 10;
-}
-
-.carousel-control-prev {
-     z-index: 20;
-}
-
-
-.carousel-control-next {
-     z-index: 20;
-}
-
-.carousel-indicators{
-    z-index: 20;
 }
