--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@ body {
 }
 
 /* Every text set to white */
-h1, h2, h3, h4, p, li {
+h1, h2, h3, h4, h5, p, li {
   color: white;
 }
 
@@ -21,10 +21,19 @@ h3 {
 
 h4 {
   font-size: 30px;
+  margin-left: 25px;
+  padding-top: 10px;
+}
+
+h5 {
+  padding-top: 10px;
 }
 
 /* Content sections and subsections styles */
-
+/* Responsive images */
+.imgDemo {
+  max-width: 100%;
+}
 
 /* Buttons styles and effects */
 .btn {
@@ -68,9 +77,44 @@ a:hover {
   text-decoration: none;
 }
 
-/* Images styles and effects */
-/*.fitImage {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}*/
+/* Carousel style */
+ngb-carousel {
+    max-width: 60%;
+    margin: 50px auto;
+}
+
+ngb-carousel img {
+    width: 100%;
+    outline: none;
+}
+
+.carousel-inner {
+    overflow: visible;
+}
+
+.carousel-item {
+    display: flex !important;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 1.2s ease-in-out, visibility 1.2s;
+    z-index: -1;
+}
+
+.carousel-item.active{
+    opacity: 1;
+    visibility: visible;
+    z-index: 10;
+}
+
+.carousel-control-prev {
+     z-index: 20;
+}
+
+
+.carousel-control-next {
+     z-index: 20;
+}
+
+.carousel-indicators{
+    z-index: 20;
+}
